fixed overflow issues

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -13,7 +13,7 @@
 	background-size: cover;
 	background-position: center 65%;
 	background-repeat: no-repeat;
-	// overflow: hidden;
+	overflow: hidden;
 
 	z-index: -1;
 
