--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -213,7 +213,7 @@
 
 @media (min-width: 1200px) {
 	.nav {
-		max-width: 1500px;
+		// max-width: 1500px;
 		&__logo {
 			h1 {
 				font-size: 3.6rem;
